# clust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
clust_macros/: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
clust_macros/src/: check_result.rs  lib.rs  parameter_type.rs  return_type.rs  tool.rs
clust_macros/tests/: tool.rs  tool_async.rs  tool_async_with_result.rs  tool_multi_args.rs  tool_with_array_arg.rs  tool_with_multi_args.rs  tool_with_no_return_value.rs  tool_with_optional_arg.rs  tool_with_result.rs  tool_with_struct.rs
examples/: conversation.rs  create_a_message.rs  create_a_message_with_builder.rs  create_a_message_with_vision.rs  function_calling.rs  streaming_messages.rs  streaming_messages_tokio.rs  streaming_messages_tools.rs  tool_use.rs
src/: api_key.rs  attributes.rs  beta.rs  client.rs  error.rs  lib.rs  macros.rs  messages.rs  result.rs  version.rs
src/messages/: api.rs  chunk_stream.rs  claude_model.rs  content.rs  error.rs  function.rs  max_tokens.rs  message.rs  message_chunk.rs  messages_request_body.rs  messages_response_body.rs  metadata.rs  result.rs  role.rs  stop_reason.rs  stop_sequence.rs  stream_chunk.rs  stream_option.rs  system_prompt.rs  temperature.rs  tokio_chunk_stream.rs  tool.rs  top_k.rs  top_p.rs  usage.rs
