[package]
name = "clust"
version = "0.6.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
rust-version = "1.76"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An unofficial Rust client for the Anthropic/Claude API."
documentation = "https://docs.rs/clust"
repository = "https://github.com/mochi-neko/clust"
categories = ["api-bindings", "science"]
keywords = ["claude", "rest", "api", "client", "machine-learning"]

[lib]
path = "src/lib.rs"

[features]
default = []
macros = ["dep:clust_macros"]
full = ["macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.*"
reqwest = { version = "0.11.*", features = ["json", "stream"] }
serde = { version = "1.0.*", features = ["derive"] }
serde-json-fmt = "0.1.*"
serde_json = "1.0.*"
thiserror = "1.0.*"
pin-project = "1.1.*"
futures-core = "0.3.*"
quick-xml = { version = "0.31.0", features = ["serialize"] }
clust_macros = { path = "clust_macros", optional = true }

[dev-dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
base64 = "0.22.0"
