[package]
name = "clust_macros"
version = "0.6.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
rust-version = "1.76"
license = "MIT OR Apache-2.0"
description = "Procedual macros for clust."

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.*"
syn = "2.0.*"
proc-macro2 = "1.0.*"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
clust = { path = ".." }
