[package]
name = "clust_macros"
version = "0.8.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
rust-version = "1.76"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Procedual macros for clust."
documentation = "https://docs.rs/clust_macros"
repository = "https://github.com/mochi-neko/clust"
categories = ["api-bindings", "science"]
keywords = ["clust", "macro"]

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.*"
syn = { version = "2.0.*", features = ["full"] }
proc-macro2 = "1.0.*"
valico = "4.0.*"
serde_json = "1.0.*"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
clust = { path = ".." }
